--- a/views/certifications.hbs
+++ b/views/certifications.hbs
@@ -1,9 +1,14 @@
 <head>
-  <meta charset="utf-8" />
-  <title>Certified Construction</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Employees</title>
+  <link rel="stylesheet" type="text/css" href="/css/index.css" />
+  <script src="/js/index.js"></script>
+  <script src="/js/add_certification.js"></script>
+  <script src="/js/delete_certification.js"></script>
+  <script src="/js/update_certification.js"></script> 
 </head>
 <body>
-
   <header>
     <h1>Certifications</h1>
   </header>
