--- a/views/employees_cert.hbs
+++ b/views/employees_cert.hbs
@@ -32,9 +32,9 @@
               <a
                 href="#"
                 onClick="updateEmployeeCert(this)"
-                data-employeeID={{this.employeeID}}
+                data-employeeID="{{this.fName}} {{this.lName}}"
                 data-id={{this.employeeCertID}}
-                data-certID={{this.certID}}
+                data-certID={{this.certName}}
                 data-dateObtained={{this.dateObtained}}
                 data-expirationDate={{this.expirationDate}}
               >Edit</a>
@@ -42,16 +42,16 @@
               <a
                 href="#"
                 onClick="deleteEmployeeCert(this)"
-                data-employeeID={{this.employeeID}}
+                data-employeeID="{{this.fName}} {{this.lName}}"
                 data-id={{this.employeeCertID}}
-                data-certID={{this.certID}}
+                data-certID="{{this.certName}}"
                 data-dateObtained={{this.dateObtained}}
                 data-expirationDate={{this.expirationDate}}
               >Delete</a>
             </td>
             <td>{{this.fName}} {{this.lName}}</td>
-            <td>{{this.employeeCertID}}</td>
-            <td class="hidden">{{this.certID}}</td>
+            <td>{{this.certName}}</td>
+            <td class="hidden">{{this.employeeCertID}}</td>
             <td>{{this.dateObtained}}</td>
             <td>{{this.expirationDate}}</td>
           </tr>
@@ -74,16 +74,9 @@
       <div>
         <label>Certification:
           <select id="newEmployeeCertCertID">
-            <option value="1">Safety 101</option>
-            <option value="2">Drawing Reading 101</option>
-            <option value="3">Drawing Reading 102</option>
-            <option value="4">Drawing Reading 103</option>
-            <option value="5">Ethics Compliance</option>
-            <option value="6">Cyber Security 101</option>
-            <option value="7">Cyber Security 102</option>
-            <option value="8">Torque Cert</option>
-            <option value="9">Sealing Cert</option>
-            <option value="10">Crane Cert</option>
+            {{#each data}}
+            <option value={{this.certName}}>{{this.certName}}</option>
+            {{/each}}
           </select>
         </label>
       </div>
@@ -103,30 +96,18 @@
       <div>
         <label>Employee:
           <select id="updateEmployeeCertEmployeeID">
-            <option value="1">Vladimir Collier</option>
-            <option value="2">Donna Lott</option>
-            <option value="3">Athena Fry</option>
-            <option value="4">Igor Parks</option>
-            <option value="5">Sybill Robles</option>
-            <option value="6">Lucian Jordan</option>
-            <option value="7">Sharon Murray</option>
-            <option value="8">Maisie Herman</option>
+            {{#each data}}
+            <option value="{{this.fName}} {{this.lName}}">{{this.fName}} {{this.lName}}</option>
+            {{/each}}
           </select>
         </label>
       </div>
       <div>
         <label>Certification:
           <select id="updateEmployeeCertCertID">
-            <option value="1">Safety 101</option>
-            <option value="2">Drawing Reading 101</option>
-            <option value="3">Drawing Reading 102</option>
-            <option value="4">Drawing Reading 103</option>
-            <option value="5">Ethics Compliance</option>
-            <option value="6">Cyber Security 101</option>
-            <option value="7">Cyber Security 102</option>
-            <option value="8">Torque Cert</option>
-            <option value="9">Sealing Cert</option>
-            <option value="10">Crane Cert</option>
+            {{#each data}}
+            <option value={{this.certName}}>{{this.certName}}</option>
+            {{/each}}
           </select>
         </label>
       </div>
@@ -151,9 +132,9 @@
     <form id="deleteEmployeeCertForm">
       <legend>Delete Employee Certification</legend>
       <p>Are you sure you want to delete this employee certification?</p>
-      <p>Employee ID:
+      <p>Employee:
         <input id="deleteEmployeeCertEmployeeID" disabled /></p>
-      <p>Certification ID:
+      <p>Certification:
         <input id="deleteEmployeeCertCertID" disabled /></p>
       <button type="submit">Delete</button>
       <button type="button" onClick="browseMain()">Cancel</button>
