--- a/views/departments.hbs
+++ b/views/departments.hbs
@@ -6,20 +6,20 @@
   <script src="/js/index.js"></script>
   <script src="/js/add_department.js"></script>
   <script src="/js/delete_department.js"></script>
-  <script src="/js/update_department.js"></script> 
+  <script src="/js/update_department.js"></script>
 </head>
 <body onload="browseMain()">
   <header>
-      <h1>Departments</h1>
+    <h1>Departments</h1>
   </header>
   <nav class="navbar">
-  <a href="/">Home</a>
-  <a href="departments">Departments</a>
-  <a href="certifications">Certifications</a>
-  <a href="employees">Employees</a>
-  <a href="training_sessions">Training Sessions</a>
-  <a href="employees_cert">Employee Certifications</a>
-  <a href="employees_train">Employee Training Session Sessions</a>
+    <a href="/">Home</a>
+    <a href="departments">Departments</a>
+    <a href="certifications">Certifications</a>
+    <a href="employees">Employees</a>
+    <a href="training_sessions">Training Sessions</a>
+    <a href="employees_cert">Employee Certifications</a>
+    <a href="employees_train">Employee Training Session Sessions</a>
   </nav>
   <main>
     <div id="browse">
@@ -63,36 +63,49 @@
       </table>
     </div>
 
-      <div id="insert" class="form-container" style="display:none;">
-          <form id="add-department-form">
-              <legend>Add New Department</legend>
-              <label>Name: <input type="text" id="input-name" name="name" /></label>
-              <label>Description: <input type="text" id="input-description" name="description" /></label>
-              <button type="submit">Submit</button>
-              <button type="button" onClick="browseMain()">Cancel</button>
-          </form>
-      </div>
+    <div id="insert" class="form-container" style="display:none;">
+      <form id="add-department-form">
+        <legend>Add New Department</legend>
+        <label>Name: <input type="text" id="input-name" name="name" /></label>
+        <label>Description:
+          <input
+            type="text"
+            id="input-description"
+            name="description"
+          /></label>
+        <button type="submit">Submit</button>
+        <button type="button" onClick="browseMain()">Cancel</button>
+      </form>
+    </div>
 
-      <div id="update" class="form-container" style="display:none;">
-          <form id="update-department-form">
-              <legend>Update Department</legend>
-              <input type="hidden" id="updateDeptID" name="id" />
-              <label>Name: <input type="text" id="updateDeptName" name="name" /></label>
-              <label>Description: <input type="text" id="updateDeptDescription" name="description" /></label>
-              <button type="submit">Update</button>
-              <button type="button" onClick="browseMain()">Cancel</button>
-          </form>
-      </div>
+    <div id="update" class="form-container" style="display:none;">
+      <form id="update-department-form">
+        <legend>Update Department</legend>
+        <input type="hidden" id="updateDeptID" name="id" />
+        <label>Name:
+          <input type="text" id="updateDeptName" name="name" /></label>
+        <label>Description:
+          <input
+            type="text"
+            id="updateDeptDescription"
+            name="description"
+          /></label>
+        <button type="submit">Update</button>
+        <button type="button" onClick="browseMain()">Cancel</button>
+      </form>
+    </div>
 
-      <div id="delete" class="form-container" style="display:none;">
-          <form id="delete-department-form">
-              <legend>Delete Department</legend>
-              <p>Are you sure you want to delete the department <span id="deleteDeptName"></span> with the following description?</p>
-              <p>Description: <span id="deleteDeptDescription"></span></p>
-              <input type="hidden" name="departmentID" id="deleteDeptID" />
-              <button type="submit">Delete</button>
-              <button type="button" onClick="browseMain()">Cancel</button>
-          </form>
-      </div>
+    <div id="delete" class="form-container" style="display:none;">
+      <form id="delete-department-form">
+        <legend>Delete Department</legend>
+        <p>Are you sure you want to delete the department
+          <span id="deleteDeptName"></span>
+          with the following description?</p>
+        <p>Description: <span id="deleteDeptDescription"></span></p>
+        <input type="hidden" name="departmentID" id="deleteDeptID" />
+        <button type="submit">Delete</button>
+        <button type="button" onClick="browseMain()">Cancel</button>
+      </form>
+    </div>
   </main>
 </body>
