Reset Employee Certifications and Employee Training SEssions pages to previous state

--- a/views/employees_train.hbs
+++ b/views/employees_train.hbs
@@ -32,6 +32,7 @@
                 onClick="updateEmployeeTrainingSession(this)"
                 data-employeeTrainingID={{this.employeeTrainingID}}
                 data-employeeID={{this.employeeID}}
+                data-employeeName="{{this.fName}} {{this.lName}}"
                 data-trainingID={{this.trainingID}}
               >Edit</a>
               |
