--- a/views/employees_cert.hbs
+++ b/views/employees_cert.hbs
@@ -62,13 +62,13 @@
     </table>
   </div>
   <div id="insert" class="form-container" style="display:none;">
-    <form id="newEmployeeCertForm">
+    <form id="add-employee-cert">
       <legend><strong>Add New Employee Certification</strong></legend>
       <div>
         <label>Employee:
           <select id="newEmployeeCertEmployeeID">
             {{#each employee}}
-              <option value={{this.employeeID}}>{{this.fName}}
+              <option value={{this.employeeID}} name="employee">{{this.fName}}
                 {{this.lName}}</option>
             {{/each}}
           </select>
@@ -78,7 +78,7 @@
         <label>Certification:
           <select id="newEmployeeCertCertID">
             {{#each cert}}
-              <option value={{this.certID}}>{{this.name}}</option>
+              <option value={{this.certID}} name="certID">{{this.name}}</option>
             {{/each}}
           </select>
         </label>
@@ -87,8 +87,8 @@
         <input type="date" name="dateObtained" /></label>
       <label>Expiration Date:
         <input type="date" name="expirationDate" /></label>
-      <button type="submit">Submit</button>
-      <button type="button" onClick="browseMain()">Cancel</button>
+      <input class="btn" type="submit" value="Add Certification" />
+      <input class="btn" type="button" value="Cancel" onClick="browseMain()" />
     </form>
   </div>
 
