Add full CRUD functions for Employee Training Sessions page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,7 +13,7 @@
 </nav>
 <p style="text-align: center;">
   This is the main portal to access and manage different aspects of our
-  company's operations. Below, you'll find links to various database pages
+  company's operations. <br> Below, you'll find links to various database pages
   that provide specific functionalities.
 </p>
 <h2>Database Pages</h2>
