--- a/views/employees_train.hbs
+++ b/views/employees_train.hbs
@@ -1,3 +1,9 @@
+<head>
+  <title>Employee Training Sessions</title>
+  <script src="/js/add_employee_training.js"></script>
+  <script src="/js/delete_employee_training.js"></script>
+  <script src="/js/update_employee_training.js"></script>
+</head>
 <header>
   <h1>Employee Training Sessions</h1>
 </header>
@@ -56,7 +62,7 @@
   </div>
 
   <div id="insert" class="form-container" style="display:none;">
-    <form id="newEmployeeTrainingForm">
+    <form id="add-employee-training-form">
       <legend><strong>Add New Employee Training Session</strong></legend>
       <div>
         <label>Employee:
@@ -76,14 +82,15 @@
           </select>
         </label>
       </div>
-      <button type="submit">Submit</button>
-      <button type="button" onClick="browseMain()">Cancel</button>
+      <input class="btn" type="submit" value="Add Employee Training Session" />
+      <input class="btn" type="button" value="Cancel" onClick="browseMain()" />
     </form>
   </div>
 
   <div id="update" class="form-container" style="display:none;">
     <form id="updateEmployeeTrainingForm">
       <legend><strong>Update Employee Training Session</strong></legend>
+      <input type="hidden" id="updateEmployeeTrainingSessionEmployeeTrainingID" disabled /></label>
       <div>
         <label>Employee:
           <select id="updateEmployeeTrainingEmployeeID">
@@ -102,20 +109,21 @@
           </select>
         </label>
       </div>
-      <button type="submit">Update</button>
-      <button type="button" onClick="browseMain()">Cancel</button>
+      <input class="btn" type="submit" value="Update Employee Training Session" />
+      <input class="btn" type="button" value="Cancel" onClick="browseMain()" />
     </form>
   </div>
 
   <div id="delete" class="form-container" style="display:none;">
     <form id="deleteEmployeeTrainingForm">
       <legend><strong>Delete Employee Training Session</strong></legend>
+      <input type="hidden" id="deleteEmployeeTrainingSessionEmployeeTrainingID" disabled /></label>
       <label>Employee:
         <input type="text" id="deleteEmployeeTrainingSessionEmployeeID" disabled /></label>
       <label>Training:
         <input type="text" id="deleteEmployeeTrainingSessionTrainingID" disabled /><label/>
-      <button type="submit">Delete</button>
-      <button type="button" onClick="browseMain()">Cancel</button>
+      <input class="btn" type="submit" value="Delete Employee Training Session" />
+      <input class="btn" type="button" value="Cancel" onClick="browseMain()" />
     </form>
   </div>
 
