--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -69,7 +69,7 @@
     </div>
 
     <div id="insert" class="form-container" style="display: none;">
-      <form method="POST" id="addEmployee">
+      <form id="addEmployee">
         <legend><strong>Add Employee</strong></legend>
         <fieldset>
           <label>First Name:
@@ -97,9 +97,8 @@
     </div>
 
     <div id="update" class="form-container" style="display: none;">
-      <form method="POST" id="updateEmployee">
+      <form id="updateEmployee">
         <legend><strong>Update Employee</strong></legend>
-        <fieldset>
           <input type="hidden" name="employeeID" id="updateEmployeeID" />
           <label>First Name:
             <input type="text" name="fname" id="updateEmployeeFName" /></label>
@@ -108,13 +107,12 @@
           <label>Email:
             <input type="text" name="email" id="updateEmployeeEmail" /></label>
           <label>Department:
-            <select id="updateEmployeeDeptID" name="deptID">
+            <select id="updateEmployeeDeptID">
               {{#each departments}}
                 <option value="{{this.deptID}}">{{this.name}}</option>
               {{/each}}
             </select>
           </label>
-        </fieldset>
         <input class="btn" type="submit" value="Update Employee" />
         <input
           class="btn"
@@ -126,7 +124,7 @@
     </div>
 
     <div id="delete" class="form-container" style="display: none;">
-      <form method="POST" id="deleteEmployee">
+      <form id="deleteEmployee">
         <legend><strong>Delete Employee</strong></legend>
         <fieldset>
           <label>ID: <span id="deleteEmployeeIDSpan"></span></label>
