--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -42,8 +42,8 @@
                   data-fname="{{this.fname}}"
                   data-lname="{{this.lname}}"
                   data-email="{{this.email}}"
-                  data-deptid={{this.deptID}}
-                  data-deptName="{{this.departmentName}}"
+                  data-deptid="{{this.deptID}}"
+                  data-deptname="{{this.departmentName}}"
                 >Edit</a>
                 |
                 <a
@@ -53,7 +53,7 @@
                   data-fname="{{this.fname}}"
                   data-lname="{{this.lname}}"
                   data-email="{{this.email}}"
-                  data-deptName="{{this.departmentName}}"
+                  data-deptname="{{this.departmentName}}"
                 >Delete</a>
               </td>
               <td class="hidden">{{this.employeeID}}</td>
@@ -80,7 +80,7 @@
           <label>Department:
             <select id="input-deptid" name="deptID">
               {{#each departments}}
-                <option value={{this.deptID}}>{{this.name}}</option>
+                <option value="{{this.deptID}}">{{this.name}}</option>
               {{/each}}
             </select>
           </label>
@@ -110,16 +110,13 @@
           <label>New Department:
             <select id="updateEmployeeDeptID">
               {{#each departments}}
-                <option value={{this.deptID}}>{{this.name}}</option>
+                <option value="{{this.deptID}}">{{this.name}}</option>
               {{/each}}
             </select>
           </label>
         <input class="btn" type="submit" value="Update Employee" />
         <input
-          class="btn"
-          type="button"
-          value="Cancel"
-          onClick="browseMain()"
+          class="btn" type="button" value="Cancel" onClick="browseMain()"
         />
       </form>
     </div>
@@ -135,13 +132,9 @@
         <input type="hidden" name="employeeID" id="deleteEmployeeID" />
         <input class="btn" type="submit" value="Delete Employee" />
         <input
-          class="btn"
-          type="button"
-          value="Cancel"
-          onClick="browseMain()"
+          class="btn" type="button" value="Cancel" onClick="browseMain()"
         />
       </form>
     </div>
-
   </main>
 </body>
